# hassio_mylight_integration

./: .codeclimate.yml  .codecov.yml  .coveragerc  .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.de.md  README.es.md  README.fr.md  README.md  README.pt.md  configuration.yaml  devices.json  docker-compose.yml  get_states.json  hacs.json  mise.toml  pyproject.toml  qq  requirements.txt  requirements_base.txt  requirements_test.txt  setup.cfg  taskfile.yml
.cursor/rules/: codequality.mdc  homeassistant.mdc  project-overview.mdc  python.mdc  unit-testing-standards.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  pytest.yml  validate.yml
custom_components/mylight_systems/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device_mapper.py  diagnostics.py  entity.py  icons.json  manifest.json  repairs.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/mylight_systems/api/: __init__.py  api.py  client.py  const.py  exceptions.py  models.py  schemas.py
custom_components/mylight_systems/translations/: de.json  en.json  es.json  fr.json  pt.json
custom_components/mylight_systems/util/: __init__.py  units.py
docs/: device-mappings.md
docs/superpowers/plans/: 2026-04-24-csv-export-service.md
docs/superpowers/specs/: 2026-04-24-csv-export-service-design.md
hassio_dev/: .gitignore  configuration.yaml
scripts/: setup  test
tasks/hassio/: check-prerequisites  start  stop
tasks/precommit/: check-prerequisites  configure  run
tasks/uv/: check-prerequisites  install  lint  lint-fix  lock  tests
tests/: __init__.py  test_config_flow.py  test_diagnostics.py  test_grid_returned_energy_sensor.py  test_sensor.py  test_sensor_creation.py  test_sensor_methods.py  test_sensor_native_value.py  test_services.py  test_switch.py
tests/api/: __init__.py  test_get_battery_state.py  test_get_devices.py  test_get_measures_grouping.py  test_get_measures_grouping_range.py  test_get_measures_total.py  test_get_profile.py  test_get_relay_state.py  test_get_rooms.py  test_get_schedule.py  test_get_states.py  test_login.py  test_raw_request.py
tests/api/fixtures/devices/: ok.json
tests/api/fixtures/login/: invalid_credentials.json  ok.json  undefined_email.json  undefined_password.json
tests/api/fixtures/measures_grouping/: ok.json
tests/api/fixtures/measures_total/: ok.json
tests/api/fixtures/profile/: ok_one_phase.json  unauthorized.json
tests/api/fixtures/rooms/: ok.json  unauthorized.json
tests/api/fixtures/schedules/: ok.json
tests/api/fixtures/states/: ok_battery.json  ok_battery_not_found.json  ok_relay.json
