[tool.poetry]
name = "mylight_systems"
version = "0.1.1"
description = "MyLight Systems integration for Home Assistant"
authors = ["Pierre-Emmanuel Mercier <acesyde@gmail.com>"]
license = "MIT"
keywords = ["homeassistant", "hassio", "mylight", "solar", "power", "energy"]
readme = "README.md"
repository = "https://github.com/acesyde/hassio_mylight_integration"
packages = [{ include = "custom_components/mylight_systems" }]

[tool.poetry.dependencies]
python = "~3.11"
colorlog = "^6.7"
aiohttp = "^3.8"
homeassistant = "^2024.1"
async-timeout = "^4.0"

[tool.poetry.group.dev.dependencies]
asynctest = "^0.13"
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-socket = "^0.7"
aioresponses = "^0.7"
ruff = "^0.5"
pre-commit = "^3.7"
vulture = "^2.10"

[virtualenvs]
create = true
in-project = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv"
]

[tool.pytest.ini_options]
addopts = "-rxf -x -v -l --cov=./ --cov-report=xml"
pythonpath = ["custom_components/mylight_systems"]
testpaths = [
    "tests"
]

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]
verbose = true
